--- a/Madlibs/Readme
+++ b/Madlibs/Readme
@@ -1,1 +1,1 @@
-Okay!!
+In this I had tried learning various Concatenation methods, and it was kinda fun to make new sentences with various random inputs.
